StoneRuins now uses dimension whitelist